k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-deployment
  labels:
    app: content
spec:
  selector:
    matchLabels:
      app: content
      role: web
  template:
    metadata:
      labels:
        app: content
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/content
        imagePullPolicy: IfNotPresent
        name: content
        ports:
        - containerPort: 80
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /var/run
          name: var-run
        - mountPath: /var/cache/nginx
          name: var-cache-nginx
      volumes:
      - name: var-run
        emptyDir:
          medium: "Memory"
          sizeLimit: "4Mi"
      - name: var-cache-nginx
        emptyDir:
          medium: "Memory"
          sizeLimit: "128Mi"
